# libffmpeg

./: .gitignore  Cargo.toml  README.md
libffmpeg/: Cargo.toml
libffmpeg/src/: duration.rs  ffmpeg.rs  lib.rs
libffmpeg/src/env/: find.rs
libffmpeg/src/util/: cmd.rs  exit.rs  mod.rs  read.rs
scripts/: cov.sh
