[package]
name = "libffmpeg"
version.workspace = true
edition.workspace = true

[dependencies]
liberror = { git = "https://github.com/charliethomson/liberror" }
libsignal = { git = "https://github.com/charliethomson/libsignal" }
libcmd = { git = "https://github.com/charliethomson/libcmd" }


derive_builder = { version = "0.20.2" }
serde = { version = "1.0.219", features = ["derive"] }
strum = { version = "0.27.2", features = ["strum_macros", "derive"] }
thiserror = { version = "2.0.16" }
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16" }
tracing = { version = "0.1.41", features = ["valuable"] }
uuid = { version = "1.18.1", features = ["serde", "v4"] }
valuable = { version = "0.1.1", features = ["derive"] }


[lints]
workspace = true
